test/frontend/fail/too_many_fields.osl
struct S { int a, b; };
shader foo() {
    S s = S(1, 2, 3);
}
